<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.9</version>
        <relativePath/>
    </parent>

    <groupId>dev.pekelund</groupId>
    <artifactId>responsive-auth</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>ResponsiveAuth</name>
    <description>Responsive authentication sample with web UI and receipt processing function</description>

    <modules>
        <module>core</module>
        <module>function</module>
    </modules>

    <profiles>
        <profile>
            <id>include-web</id>
            <modules>
                <module>web</module>
            </modules>
        </profile>
    </profiles>

    <properties>
        <java.version>21</java.version>
        <google-cloud-firestore.version>3.33.0</google-cloud-firestore.version>
        <google-cloud-storage.version>2.40.1</google-cloud-storage.version>
        <google-cloud-vertexai.version>1.35.0</google-cloud-vertexai.version>
        <google-cloud-functions-framework.version>1.1.0</google-cloud-functions-framework.version>
        <spring-ai.version>1.0.2</spring-ai.version>
        <spring-cloud-function.version>4.1.2</spring-cloud-function.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring-ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>dev.pekelund</groupId>
                <artifactId>responsive-auth-core</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
                <inherited>false</inherited>
            </plugin>
        </plugins>
    </build>
</project>
